--- a/HW1123/HW1123Q11.md
+++ b/HW1123/HW1123Q11.md
@@ -42,17 +42,29 @@ $H_0$ : P = $\frac{2}{3}$
    
 $H_a$ : P > $\frac{2}{3}$
 
-檢定統計量公式： 使用以下公式計算標準化統計量Z
+#檢定的流程#
 
-由The Slutsky's theorem: $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}}$$ -> Z
+1. 計算檢定統計量Z
 
-$Z_stat$ = $$\frac{0.82-0.6667}{\sqrt{\frac{0.6667*0.3333}{200}}}$$ = 4.599 ${\approx}$ 4.6
+我們使用標準化公式計算檢定統計量: $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}}$$ -> Z
 
-由 $$\alpha$$ = 0.05 reject region = {Z>1.645} ，
+將數據代入公式： $Z_stat$ = $$\frac{0.82-0.6667}{\sqrt{\frac{0.6667*0.3333}{200}}}$$ = 4.599 ${\approx}$ 4.6
 
-臨界值： 單尾檢定的顯著水準 α=0.05，對應的標準常態分布臨界值為 $z_α$=1.645。
+2. 確定臨界值
 
-檢定結論： 因為 z=4.60>1.645，拒絕 $H_0$，落在拒絕域內。所以我們認為檢測計畫有效！
+檢定類型是 單尾檢定（右尾檢定）
+
+單尾檢定的顯著水準 α=0.05，對應的標準常態分布臨界值為 $𝑧_𝛼$=1.645。
+
+3. 判斷檢定結果
+
+我們比較檢定統計量 𝑧=4.60 與臨界值 $𝑧_𝛼$=1.645：
+
+ 𝑧=4.60 > $𝑧_𝛼$=1.645
+
+ 因為 𝑧超過了臨界值，我們拒絕虛無假設 $H_0$
+​
+4.檢定結論： 因為 𝑧=4.60 > $𝑧_𝛼$=1.645，拒絕 $H_0$，落在拒絕域內。所以我們認為檢測計畫有效！
 
 ![image](https://github.com/user-attachments/assets/81209330-7a48-4d41-ab7e-7cba6ad87647)
 
