--- a/HW1123/12_譚玥湄/CH09.02_Q24.md
+++ b/HW1123/12_譚玥湄/CH09.02_Q24.md
@@ -1,18 +1,16 @@
 CH09.02_Q24 
-O Baby! The weights of 3-month-old baby girls are known to have a mean of 5.86 kilograms.2 Doctors at an inner city pediatric facility suspect that the average weight of 3-month-old baby girls at their facility
-may be less than 5.86 kilograms. They select a random sample of 40 3-month-old baby girls and find x =5.56 and s=0.70 kilogram.  
+O Baby! The weights of 3-month-old baby girls are known to have a mean of 5.86 kilograms.2 Doctors at an inner city pediatric facility suspect that the average weight of 3-month-old baby girls at their facility may be less than 5.86 kilograms. They select a random sample of 40 3-month-old baby girls and find x =5.56 and s=0.70 kilogram.  
 a. Does the data indicate that the average weight of 3-month-old baby girls at their facility is less than 5.86 kilograms? Test using $$\alpha$$ = .05.  
 b. What is the p-value associated with the test in part a? Can you reject $$H_0$$ at the 5% level of significance using the p-value?  
-
 ---
 
-2. Determine the Test Statistic:
-The formula for the ttt-statistic is: t=s/nxˉ−μ
-Where:
-•	xˉ=5.56\bar{x} = 5.56xˉ=5.56 (sample mean)
-•	μ=5.86\mu = 5.86μ=5.86 (population mean under H0H_0H0)
-•	s=0.70s = 0.70s=0.70 (sample standard deviation)
-•	n=40n = 40n=40 (sample size)
+2. Determine the Test Statistic:  
+The formula for the ttt-statistic is: t=s/nxˉ−μ  
+Where:  
+•	xˉ=5.56\bar{x} = 5.56xˉ=5.56 (sample mean)  
+•	μ=5.86 (population mean under H0H_0H0)  
+•	0s=0.70 (sample standard deviation)  
+•	n=40 (sample size)  
 3. Substitute the Values:
 t=5.56−5.860.70/40=−0.300.1107≈−2.71t = \frac{5.56 - 5.86}{0.70 / \sqrt{40}} = \frac{-0.30}{0.1107} \approx -2.71t=0.70/405.56−5.86=0.1107−0.30≈−2.71
 4. Find the Critical Value:
