--- a/HW1123/12_譚玥湄/CH09.02_Q24.md
+++ b/HW1123/12_譚玥湄/CH09.02_Q24.md
@@ -5,30 +5,37 @@ b. What is the p-value associated with the test in part a? Can you reject $$H_0$
 
 ---
 
+
+
+
 2. Determine the Test Statistic:  
 The formula for the ttt-statistic is: t=s/nxˉ−μ  
 Where:  
 •	xˉ=5.56\bar{x} = 5.56xˉ=5.56 (sample mean)  
 •	μ=5.86 (population mean under H0H_0H0)  
-•	0s=0.70 (sample standard deviation)  
+s=0.70 (sample standard deviation)  
 •	n=40 (sample size)  
 3. Substitute the Values:
 t=5.56−5.860.70/40=−0.300.1107≈−2.71t = \frac{5.56 - 5.86}{0.70 / \sqrt{40}} = \frac{-0.30}{0.1107} \approx -2.71t=0.70/405.56−5.86=0.1107−0.30≈−2.71
 4. Find the Critical Value:
-With α=0.05\alpha = 0.05α=0.05 and degrees of freedom (df=n−1=39df = n - 1 = 39df=n−1=39), the critical value for a one-tailed ttt-test can be obtained from a ttt-distribution table or software. The critical ttt-value is approximately -1.685.
+With α=0.05\alpha = 0.05α=0.05 and degrees of freedom (df=n−1=39), the critical value for a one-tailed ttt-test can be obtained from a t-distribution table or software. The critical t-value is approximately -1.685.
 
 5. Decision Rule:  
-•	Reject H0H_0H0 if t≤−1.685.  
-Sincet=−2.71 is less than −1.685, we reject H0H_0H0.  
-Conclusion for Part (a):  
+•	Reject $$H_0$$ if t≤−1.685.  
+Since t=−2.71 is less than −1.685, we reject $$H_0$$.
+
+---
+Part (a):  
 The data indicates that the average weight of 3-month-old baby girls at the facility is significantly less than 5.86 kilograms at the 5% significance level.
-________________________________________
+
+---
 Part (b): Find the p-value
 The p-value corresponds to the area under the ttt-distribution curve to the left of t=−2.71 with df=39.  
 Using statistical software or a ttt-distribution table:  
 •	The p-value for tt=−2.71 with df=39 is approximately 0.005.  
 Decision Based on the p-value:
-•	If the p-value ≤α\leq \alpha≤α, reject H0H_0H0.
-•	Since p=0.005<0.05, we reject H0H_0H0.
+•	If the p-value ≤α\leq \alpha≤α, reject $$H_0$$.
+•	Since p=0.005<0.05, we reject $$H_0$$.
+
 Conclusion for Part (b):
 The p-value confirms that we can reject H0H_0H0 at the 5% significance level. The evidence strongly suggests that the average weight of 3-month-old baby girls at the facility is less than 5.86 kilograms.
