--- a/HW1123/HW1123Q11.md
+++ b/HW1123/HW1123Q11.md
@@ -3,27 +3,27 @@
 ![image](https://github.com/user-attachments/assets/a56aa696-8296-4fa5-aa2b-923a7463f8ee)
 
 在那些被診斷為早期乳腺癌的女性中，其中有三分之一最終會死於該病。也就是說，存活率是 p =66.67%
-假設一項乳腺癌早期檢測計劃已啟動，目的是提高被診斷為該病的女性的生存率 p。從進行了篩查的200名被診斷為乳腺癌的女性中，隨機抽取了一個樣本，記錄了有多少人最終存活下來，設 x 為樣本中存活的女性數量。
+假設一項乳腺癌早期檢測計劃已啟動，目的是提高被診斷為該病的女性的生存率 p。從進行了篩查的200名被診斷為乳腺癌的女性中，隨機抽取了一個樣本，### 記錄了有多少人最終存活下來，設 x 為樣本中存活的女性數量。
 
-## a. 如果希望判斷篩查計劃是否有效，應檢驗的對立假設是什麼？
+##### a. 如果希望判斷篩查計劃是否有效，應檢驗的對立假設是什麼？
 
-## b. 說明虛無假設。
+##### b. 說明虛無假設。
 
-## c. 如果在樣本中有 164 名女性生存，是否可以得出篩查計劃有效的結論？使用 α=0.05 進行檢驗，並解釋檢驗的實際結論。
+##### c. 如果在樣本中有 164 名女性生存，是否可以得出篩查計劃有效的結論？使用 α=0.05 進行檢驗，並解釋檢驗的實際結論。
 
-## d. 計算檢驗的 p-value 並解釋其含義
+##### d. 計算檢驗的 p-value 並解釋其含義
 
 答案:
 
 a. 
 對立假設檢測計畫的目的是提升存活率，在這裡，我們希望證明計畫有效，也就是存活率 p 比原來的 66.67%更高：
 
-## $H_a$: P> $\frac{2}{3}$=0.6667
+#### $H_a$: P> $\frac{2}{3}$=0.6667
 
 b. 
 虛無假設是檢測計畫對存活率無影響，假設「計畫沒有效果」，也就是存活率沒有改變，仍然是 66.67%
 
-## $H_0$: P = $\frac{2}{3}$=0.6667
+#### $H_0$: P = $\frac{2}{3}$=0.6667
 
 c. 
 假設檢定（用數據來檢查計畫是否有效）, 我們要進行單尾檢定，檢驗 $H_0$ 是否成立。
@@ -44,19 +44,19 @@ $H_a$ : P > $\frac{2}{3}$
 
 ### 檢定的流程
 
-## 1. 計算檢定統計量Z
+#### 1. 計算檢定統計量Z
 
 我們使用標準化公式計算檢定統計量: $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}}$$ -> Z
 
 將數據代入公式： $Z_stat$ = $$\frac{0.82-0.6667}{\sqrt{\frac{0.6667*0.3333}{200}}}$$ = 4.599 ${\approx}$ 4.6
 
-## 2. 確定臨界值
+#### 2. 確定臨界值
 
 檢定類型是 單尾檢定（右尾檢定）
 
 單尾檢定的顯著水準 α=0.05，對應的標準常態分布臨界值為 $𝑧_𝛼$=1.645。
 
-## 3. 判斷檢定結果
+#### 3. 判斷檢定結果
 
 我們比較檢定統計量 𝑧=4.60 與臨界值 $𝑧_𝛼$=1.645：
 
@@ -64,7 +64,7 @@ $H_a$ : P > $\frac{2}{3}$
 
  因為 𝑧超過了臨界值，我們拒絕虛無假設 $H_0$
 ​
-## 4.檢定結論： 因為 𝑧=4.60 > $𝑧_𝛼$=1.645，拒絕 $H_0$，落在拒絕域內。所以我們認為檢測計畫有效！
+#### 4.檢定結論： 因為 𝑧=4.60 > $𝑧_𝛼$=1.645，拒絕 $H_0$，落在拒絕域內。所以我們認為檢測計畫有效！
 
 ![image](https://github.com/user-attachments/assets/81209330-7a48-4d41-ab7e-7cba6ad87647)
 
