--- a/HW1123/HW1123Q11.md
+++ b/HW1123/HW1123Q11.md
@@ -77,9 +77,29 @@ $H_0$ : P = $\frac{2}{3}$
    
 $H_a$ : P > $\frac{2}{3}$
 
-由The Slutsky's theorem: $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}}$$ -> Z
+我們使用標準化公式計算檢定統計量: $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}}$$ -> Z
 
 $Z_stat$ = $\frac{0.82-0.6667}{\sqrt{\frac{0.6667*0.3333}{200}}}$ = 4.599 ${\approx}$ 4.6
 
 p 值表示在 $H_0$ 成立的前提下，觀察到像 $\hat{p}= 0.82$ 或更極端值的概率。
+
+p-value=P(Z>4.60)
+
+查標準常態分布表得：
+
+$p\text{-value} \approx 0.000003$
+
+
+解釋： p 值非常小，遠小於α= 0.05, 意味著在虛無假設成立的條件「計畫無效」的假設下，
+
+觀察到樣本存活率 82%，那82% 幾乎是不可能的。
+
+這進一步支持結論：所以檢測計畫有效，提高了存活率。
+
+![image](https://github.com/user-attachments/assets/b691da4d-dbbb-4424-98ec-1890d1e2069d)
+
+![image](https://github.com/user-attachments/assets/79eaed85-7a57-4405-a584-41af09a6662b)
+
+![image](https://github.com/user-attachments/assets/b0abd65d-d5c8-451c-ab13-b4c18e783247)
+
 
