--- a/HW1123/HW1123Q11.md
+++ b/HW1123/HW1123Q11.md
@@ -72,18 +72,34 @@ $H_a$ : P > $\frac{2}{3}$
 
 
 d. 
+#### 1. p 值的定義
+
+p 值是指在虛無假設 $H_0$ 成立的情況下，觀察到檢定統計量 𝑧比實際觀測值更極端的概率。
 
 $H_0$ : P = $\frac{2}{3}$
    
 $H_a$ : P > $\frac{2}{3}$
 
-我們使用標準化公式計算檢定統計量: $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}}$$ -> Z
+檢定統計量： 𝑧=4.60
 
-$Z_stat$ = $\frac{0.82-0.6667}{\sqrt{\frac{0.6667*0.3333}{200}}}$ = 4.599 ${\approx}$ 4.6
+我們希望計算右尾的累積概率 𝑃(𝑍>4.60)，這就是 p 值。
 
-p 值表示在 $H_0$ 成立的前提下，觀察到像 $\hat{p}= 0.82$ 或更極端值的概率。
+#### 2.計算P值
 
-p-value=P(Z>4.60)
+使用標準常態分布的累積密度函數 (CDF) 來計算：
+
+p-value=1−P(Z≤4.60)
+
+步驟：
+
+1.查找 𝑍=4.60的累積概率 𝑃(𝑍≤4.60)。
+
+P(Z≤4.60)≈0.999997
+
+2.計算右尾累積概率：
+
+p-value=1−0.999997=0.000003
+
 
 查標準常態分布表得：
 
