--- a/HW1123/HW1123Q11.md
+++ b/HW1123/HW1123Q11.md
@@ -100,22 +100,10 @@ P(Z≤4.60)≈0.999997
 
 p-value=1−0.999997=0.000003
 
+p 值 ≈0.000003 是一個極小的值，表明如果檢測計畫對存活率沒有影響( $H_0$成立)，觀察到樣本存活率 82% 或更高的概率幾乎為零。
 
-查標準常態分布表得：
-
-$p\text{-value} \approx 0.000003$
+因此，我們有非常強的證據拒絕 $H_0$，並認為檢測計畫有效，提高了存活率。
 
 
-解釋： p 值非常小，遠小於α= 0.05, 意味著在虛無假設成立的條件「計畫無效」的假設下，
-
-觀察到樣本存活率 82%，那82% 幾乎是不可能的。
-
-這進一步支持結論：所以檢測計畫有效，提高了存活率。
-
-![image](https://github.com/user-attachments/assets/b691da4d-dbbb-4424-98ec-1890d1e2069d)
-
-![image](https://github.com/user-attachments/assets/79eaed85-7a57-4405-a584-41af09a6662b)
-
-![image](https://github.com/user-attachments/assets/b0abd65d-d5c8-451c-ab13-b4c18e783247)
 
 
