--- a/HW1123/HW1123Q07.md
+++ b/HW1123/HW1123Q07.md
@@ -1,4 +1,8 @@
 ![image](https://github.com/user-attachments/assets/b2d8f278-1e01-49e9-afe8-91a20ad3878f)
+<img width="308" alt="image" src="https://github.com/user-attachments/assets/17de46ea-d3b9-4e2c-b152-c448e75ac871">
+
+<img width="481" alt="image" src="https://github.com/user-attachments/assets/9f936d74-4b5e-4ca6-a230-a6b981a1c892">
+<img width="401" alt="image" src="https://github.com/user-attachments/assets/a26b0a83-409c-4586-a909-a6a92c168e16">
 
 
 
