--- a/HW1123/11_黃德榮/CH09.02_Q08-10.md
+++ b/HW1123/11_黃德榮/CH09.02_Q08-10.md
@@ -1,159 +1,15 @@
-8. A left-tailed test with 
-𝛼
-=
-0.01
-α=0.01
-Rejection region: For a left-tailed test, the critical value corresponds to 
-𝑧
-𝛼
-z 
-α
-​
- , where 
-𝑃
-(
-𝑍
-≤
-𝑧
-𝛼
-)
-=
-0.01
-P(Z≤z 
-α
-​
- )=0.01. Using a standard normal table, 
-𝑧
-𝛼
-≈
-−
-2.33
-z 
-α
-​
- ≈−2.33.
-Decision: Since 
-𝑧
-=
-−
-2.41
-z=−2.41 is less than 
-𝑧
-𝛼
-=
-−
-2.33
-z 
-α
-​
- =−2.33, we reject the null hypothesis.
-Reliability: The 
-𝑝
-p-value for 
-𝑧
-=
-−
-2.41
-z=−2.41 is approximately 
-0.0080
-0.0080, which is less than 
-𝛼
-=
-0.01
-α=0.01. This supports the decision.
-9. A left-tailed test with 
-𝛼
-=
-0.05
-α=0.05
-Rejection region: For 
-𝛼
-=
-0.05
-α=0.05, 
-𝑧
-𝛼
-≈
-−
-1.645
-z 
-α
-​
- ≈−1.645.
-Decision: Since 
-𝑧
-=
-−
-2.41
-z=−2.41 is less than 
-𝑧
-𝛼
-=
-−
-1.645
-z 
-α
-​
- =−1.645, we reject the null hypothesis.
-Reliability: The 
-𝑝
-p-value (
-≈
-0.0080
-≈0.0080) is also less than 
-𝛼
-=
-0.05
-α=0.05, confirming the conclusion.
-10. A two-tailed test with 
-𝛼
-=
-0.02
-α=0.02
-Rejection region: For a two-tailed test, split 
-𝛼
-α into two tails (
-𝛼
-/
-2
-=
-0.01
-α/2=0.01):
-Critical values are 
-𝑧
-=
-±
-2.33
-z=±2.33.
-Decision: Since 
-𝑧
-=
-−
-2.41
-z=−2.41 is less than 
-−
-2.33
-−2.33, it falls in the rejection region. We reject the null hypothesis.
-Reliability: The 
-𝑝
-p-value for a two-tailed test is 
-2
-×
-𝑃
-(
-𝑍
-≤
-−
-2.41
-)
-≈
-2
-×
-0.0080
-=
-0.016
-2×P(Z≤−2.41)≈2×0.0080=0.016, which is less than 
-𝛼
-=
-0.02
-α=0.02, supporting the conclusion.
+8. A left-tailed test with α=0.01
+•	Rejection region: For a left-tailed test, the critical value corresponds to zα, where P(Z≤zα)=0.01. Using a standard normal table, zα≈−2.33.
+•	Decision: Since z=−2.41 is less than zα=−2.33, we reject the H0 hypothesis.
+•	Reliability: The p-value for z=−2.41is approximately 0.00800.00800.0080, which is less than α=0.01. This supports the decision.
+
+9. A left-tailed test with α=0.05
+•	Rejection region: For α=0.05, zα≈−1.64.
+•	Decision: Since z=−2.41 is less than zα=−1.645, we reject the H0 hypothesis.
+•	Reliability: The p-value (≈0.0080) is also less than α=0.05, confirming the conclusion.
+
+10. A two-tailed test with α=0.02\alpha = 0.02α=0.02
+•	Rejection region: For a two-tailed test, split α into two tails (α/2=0.01):
+o	Critical values are z=±2.33.
+•	Decision: Since z=−2.41 is less than −2.33, it falls in the rejection region. We reject the H0 hypothesis.
+•	Reliability: The p-value for a two-tailed test is 2×P(Z≤−2.41)≈2×0.0080=0.0162, which is less than α=0.02, supporting the conclusion.
