--- a/HW1123/11_黃德榮/CH09.02_Q08-10.md
+++ b/HW1123/11_黃德榮/CH09.02_Q08-10.md
@@ -15,7 +15,7 @@
 •	Reliability: The p-value (≈0.0080) is also less than α=0.05, confirming the conclusion.
 
 
-10. A two-tailed test with α=0.02\alpha = 0.02α=0.02
+10. A two-tailed test with α=0.02
 •	Rejection region: For a two-tailed test, split α into two tails (α/2=0.01):
 
 o	Critical values are z=±2.33.
