--- a/HW1123/11_黃德榮/CH09.02_Q23.md
+++ b/HW1123/11_黃德榮/CH09.02_Q23.md
@@ -26,7 +26,7 @@ Substituting the values:
 
 z=1.01−10.18/35=0.010.0304≈0.33
 
-3.	Find the ppp-value: For a two-tailed test, the ppp-value is:
+3.	Find the ppp-value: For a two-tailed test, the p-value is:
    
 p=2×P(Z≥∣z∣)
 
