--- a/HW1123/12_譚玥湄/CH09.02_Q11-13.md
+++ b/HW1123/12_譚玥湄/CH09.02_Q11-13.md
@@ -8,34 +8,34 @@ p-Values Find the p-values for the z-tests in Exercises 11–13 and determine th
 To find the p-values for the z-tests and determine the significance of the results, we use the z-distribution. Here’s how to calculate the p-values:
 
 11. A right-tailed test with observed z = 1.15
-1.	Find the p-value:
-The p-value is the area to the right of z=1.15z = 1.15z=1.15. Using a z-table or statistical software:  
+step 1.	Find the p-value:
+The p-value is the area to the right of  z=1.15. Using a z-table or statistical software:  
 p=P(Z>1.15)=1−P(Z≤1.15)
 From the z-table: (Z≤1.15)≈0.8749
 So: p=1−0.8749=0.1251
 
-2.	Significance:  
+step 2.	Significance:  
 Compare the p-value to the significance level ($$\alpha$$, often 0.05).  
 Since 0.1251>0.05, the result is not significant.
 
 ----
 12. A two-tailed test with observed z = 22.78  
-1.	Find the p-value:  
-For a two-tailed test, the p-value is:  p=2×P(Z>22.78)  
+step 1.	Find the p-value:  
+For a two-tailed test, the p-value is:  p=2×P (Z>22.78)  
 For z=22.78, the probability is essentially 0 (extremely small).  
 So:  p≈2×0=0
 
-2.	Significance:  
+step 2.	Significance:  
 Since p=0<0.05, the result is highly significant.
 
 ----
 13. A left-tailed test with observed z = 21.81
-1.	Find the p-value:
+step 1.	Find the p-value:
 For a left-tailed test, the p-value is:p=P(Z<21.81)
 For z=21.81, the probability is effectively 1 (extremely close to 1).
 So: p≈1
 
-2.	Significance:
+step 2.	Significance:
 Since p=1>0.05, the result is not significant.
 
 ----
