--- a/HW1123/10_蔡佳媛/CH09.02_Q08-10_10_Cathy.md
+++ b/HW1123/10_蔡佳媛/CH09.02_Q08-10_10_Cathy.md
@@ -23,7 +23,7 @@ The probability of making an incorrect decision is $\alpha = 0.05$
 
 ### 10. A two-tailed test with $\alpha = 0.02$
 
-$z_{\frac{0.02}{2}} = 2.33$, so the critical vavlues are -2.33 and 2.33  
+$z_{\frac{0.02}{2}} = 2.33$, so the critical values are -2.33 and 2.33  
 
 Compare the observed value of the test statistic, z = -2.41, with the critical value necessary for rejection, $z_{-0.01} = -2.33$.  
 Since the observed value of the test statistic falls in the rejection region (z = -2.41 is less than -2.33), reject $H_{0}$.  
