--- a/HW1123/HW1123Q13.md
+++ b/HW1123/HW1123Q13.md
@@ -1,1 +1,8 @@
+513717012 張育誠
+
+# Question
+![image](https://github.com/user-attachments/assets/678415ec-184d-4763-9a58-5e8bec7e2f10)
+
+# Answer 
+
 
