--- a/HW1123/HW1123Q13.md
+++ b/HW1123/HW1123Q13.md
@@ -5,4 +5,18 @@
 
 # Answer 
 
+已知CBF呈現常態分布，母體平均值74
+
+經隨機實驗25名病人，樣本平均值為69.7, 標準差為16
+
+選擇Level of significance = 0.05
+
+$\mu = 74 $
+
+$\bar{x}$ = 69.7
+
+s = 16
+
+$\alpha = 0.05 $
+
 
