--- a/HW1123/10_蔡佳媛/CH09.04_Q08_10_Cathy.md
+++ b/HW1123/10_蔡佳媛/CH09.04_Q08_10_Cathy.md
@@ -1,2 +1,28 @@
 
 ![image](https://github.com/user-attachments/assets/15a2970a-ffa4-4918-b388-f260975475f4)
+
+
+56% of the participants indicated that they would not ride in a driverless car  
+87% favor a requirement of having a human in the driver's seat  
+n = 500  
+$\alpha$ = 0.05
+
+
+### a. Whether more than 50% of Americans would not ride in a driverless car.
+
+$H_{0}$: $p \gt$ 0.5  
+$H_{a}$: $p \leq$ 0.5  
+
+Test statistic: z $\approx \frac{\hat{p}-p_{0}}{\sqrt{\frac{p_{0}q_{0}}{n}}}$ = $\frac{0.5-0.56}{\sqrt{\frac{0.5 \times 0.5}{500}}}$ = -2.683282 $\approx$ -2.68
+
+z = -2.68 is less than -1.645, reject $H_{0}$
+
+![image](https://github.com/user-attachments/assets/0d07b074-c6ed-4608-a2a6-7c748c72098c)
+
+
+### b. Use the p-value approach. Do the two approaches lead to the same conclusion?  
+
+P(z $\lt$ -2.68) = 0.0037, which is less than $\alpha$, $H_{0}$ is ejected
+
+![image](https://github.com/user-attachments/assets/1f17bd16-6352-47ba-bf16-a8394bccad36)
+
