--- a/HW1123/10_蔡佳媛/CH09.04_Q09_10_Cathy.md
+++ b/HW1123/10_蔡佳媛/CH09.04_Q09_10_Cathy.md
@@ -1,2 +1,26 @@
 
 ![image](https://github.com/user-attachments/assets/e7c72154-6077-4b33-8df8-34b8391b9603)
+
+20% of all samll businesses fail in their first year  
+n = 200, 30 of small businesses were recorded as failed
+
+### a. If we wish to test the claim that the new tax laws help small businesses survive, how would we express $H_{0}$ and $H_{a}$?
+
+
+
+### b. Find the value of the test statistic based on $\hat{p}$, the sample proportion of failed small businesses.
+
+
+
+
+### c. What is the rejection region based on a significance level of $\alpha$ = 0.05? Can you conclude that the new tax structure helps samll businesses survive?
+
+
+
+
+### d. Find the p-value for the test. Does your conclusion in part c change?
+
+
+
+
+
