--- a/HW1123/10_蔡佳媛/CH09.04_Q10_10_Cathy.md
+++ b/HW1123/10_蔡佳媛/CH09.04_Q10_10_Cathy.md
@@ -1,2 +1,15 @@
 
 ![image](https://github.com/user-attachments/assets/d3d3620e-5985-4d87-8529-8a8368cbacd5)
+
+
+75% of the offspring resulting form this cross will have red flowers  
+n = 100, 58 plants had red petals  
+
+### a. Why hypothesis should you use to test the geneticist's claim?
+
+
+
+### b. Calculate the test statistic and its p-value. Use the p-value to evaluate the statistical significance of the results at the 1% level.
+
+
+  
