--- a/HW1123/10_蔡佳媛/CH09.04_Q09_10_Cathy.md
+++ b/HW1123/10_蔡佳媛/CH09.04_Q09_10_Cathy.md
@@ -6,21 +6,28 @@ n = 200, 30 of small businesses were recorded as failed
 
 ### a. If we wish to test the claim that the new tax laws help small businesses survive, how would we express $H_{0}$ and $H_{a}$?
 
-
+$H_{0}$: $p \lt$ 0.2  
+$H_{a}$: $p \geq$ 0.2  
 
 ### b. Find the value of the test statistic based on $\hat{p}$, the sample proportion of failed small businesses.
 
-
+Test statistic: z $\approx \frac{\hat{p}-p_{0}}{\sqrt{\frac{p_{0}q_{0}}{n}}}$ = $\frac{\frac{30}{200}-0.2}{\sqrt{\frac{0.2 \times 0.8}{200}}}$ = -1.767767 $\approx$ -1.77
 
 
 ### c. What is the rejection region based on a significance level of $\alpha$ = 0.05? Can you conclude that the new tax structure helps samll businesses survive?
 
+rejection region = { z: z < -1.645 }  
 
+Since the observed value of the test statistic falls in the rejection region (z = -1.77 is less than -1.645), reject $H_{0}$.  
+
+![image](https://github.com/user-attachments/assets/77caaee9-2823-4570-800a-2c4c740ffcdc)
 
 
 ### d. Find the p-value for the test. Does your conclusion in part c change?
 
+P(z < -1.77) = 0.0384, which is less than 0.05, $H_{0}$ is rejected
 
 
+![image](https://github.com/user-attachments/assets/0d85883a-fa93-4aaf-b005-ea63355f0d3e)
 
 
