--- a/HW1123/HW1123Q13.md
+++ b/HW1123/HW1123Q13.md
@@ -7,7 +7,7 @@
 
 已知CBF呈現常態分布，母體平均值74
 
-經隨機實驗25名病人，樣本平均值為69.7, 標準差為16
+經隨機實驗25名病人，樣本平均值為69.7， 標準差為16
 
 選擇Level of significance = 0.05
 
@@ -18,5 +18,52 @@ $\bar{x}$ = 69.7
 s = 16
 
 $\alpha = 0.05 $
+
+## Step 1 定義 $H_0$ 及 $H_1$　
+
+$H_0$ : $\mu$ = 74
+
+$H_a$ : $\mu\ne$ 74
+
+## Step 2 選擇Level of significance
+
+$\alpha = 0.05 $
+
+## Step 3 選擇檢定統計量
+
+因母體標準差未知，且樣本數小於30，故使用 $t = \frac{\bar{x} - \mu}{\frac{s}{\sqrt{n}}}$
+
+## Step 4 制定決策規則
+
+因平均值可能大於74或小於74，將 $\alpha = 0.05$ 平均分配在雙尾，故為 $\alpha/2 = 0.025$
+
+自由度為25-1 = 24
+
+根據雙尾檢定， $\alpha = 0.05 $,  自由度=24，從 t 分布表查得臨界值為 2.064
+
+拒絕域：
+
+$t_{0.025}$ < -2.064 或 
+
+$t_{0.025}$ > 2.064
+
+接受域：
+
+$t_{0.025} \leq t \leq t_{0.025}$
+
+![image](https://github.com/user-attachments/assets/30b4611d-33f1-4f54-911a-10e469e165e7)
+
+
+## Step 5 計算檢定統計量
+
+t = $\frac{(69.7-74)}{16/ \sqrt{25}}$ = -1.3438
+
+## Step 6 解釋
+
+因統計量落在接受域中，因此無法拒絕 $H_0$
+
+
+
+
 
 
