--- a/HW1123/HW1123Q13.md
+++ b/HW1123/HW1123Q13.md
@@ -51,8 +51,7 @@ $t_{0.025}$ > 2.064
 
 $t_{0.025} \leq t \leq t_{0.025}$
 
-![image](https://github.com/user-attachments/assets/30b4611d-33f1-4f54-911a-10e469e165e7)
-
+<img width="378" alt="image" src="https://github.com/user-attachments/assets/30b4611d-33f1-4f54-911a-10e469e165e7">
 
 ## Step 5 計算檢定統計量
 
