--- a/HW1123/HW1123Q13.md
+++ b/HW1123/HW1123Q13.md
@@ -5,9 +5,9 @@
 
 # Answer 
 
-已知CBF呈現常態分布，母體平均值74
+已知CBF呈現常態分布，母體平均值為74
 
-經隨機實驗25名腦中風病人，樣本平均值為69.7， 標準差為16
+隨機實驗25名腦中風病人，樣本平均值為69.7， 標準差為16
 
 選擇 $\alpha = 0.05 $
 
