--- a/HW1123/HW1123Q13.md
+++ b/HW1123/HW1123Q13.md
@@ -37,7 +37,7 @@ $\alpha = 0.05 $
 
 因平均值可能大於74或小於74，將 $\alpha = 0.05$ 平均分配在雙尾，為 $\alpha/2 = 0.025$
 
-自由度為25-1 = 24
+自由度為n -1 = 25-1 = 24
 
 根據雙尾檢定， $\alpha = 0.05 $,  自由度=24，從 t 分布表查得Critical Value為 2.064
 
