--- a/HW1123/HW1123Q13.md
+++ b/HW1123/HW1123Q13.md
@@ -39,7 +39,7 @@ $\alpha = 0.05 $
 
 自由度為n -1 = 25-1 = 24
 
-根據雙尾檢定， $\alpha = 0.05 $,  自由度=24，從 t 分布表查得Critical Value為 2.064
+根據雙尾檢定， $\alpha = 0.05 $,  自由度 = 24，從 t 分布表查Critical Value為 2.064
 
 拒絕域：
 
