--- a/HW1123/HW1123Q13.md
+++ b/HW1123/HW1123Q13.md
@@ -49,7 +49,7 @@ $t_{0.025}$ > 2.064
 
 接受域：
 
-$t_{0.025} \leq t \leq t_{0.025}$
+$t_{0.025} \leq t \leq t_{0.025}$ = $-2.064 \leq t \leq 2.064 $
 
 <img width="378" alt="image" src="https://github.com/user-attachments/assets/30b4611d-33f1-4f54-911a-10e469e165e7">
 
