--- a/HW1123/12_譚玥湄/CH09.02_Q11-13.md
+++ b/HW1123/12_譚玥湄/CH09.02_Q11-13.md
@@ -28,7 +28,7 @@ For z=22.78, the probability is essentially 0 (extremely small).
 So:  p≈2×0=0  
 
 step 2.	Significance:  
-Since p=0 ,$$\alpha$$ =0.05 , p < $$\alpha$$ , the result is highly significant.  
+Since p=0 ,$$alpha$$ =0.05 , p < $$\alpha$$ , the result is highly significant.  
 
 ----  
 13. A left-tailed test with observed z = 21.81
@@ -39,7 +39,7 @@ For z=21.81, the probability is effectively 1 (extremely close to 1).
 So: p≈1  
 
 step 2.	Significance:  
-Since p=1 ,$$alpha$$ =0.05, p> $$\alpha$$ the result is not significant.  
+Since p=1 ,$$alpha$$ =0.05, p> $$alpha$$ the result is not significant.  
 
 ----  
 Summary:  
