--- a/HW1123/HW1123Q13.md
+++ b/HW1123/HW1123Q13.md
@@ -39,9 +39,12 @@ $\alpha = 0.05 $
 
 因平均值可能大於74或小於74，將 $\alpha = 0.05$ 平均分配在雙尾，為 $\alpha/2 = 0.025$
 
+![image](https://github.com/user-attachments/assets/a30f940b-5d62-47af-acdd-5f9ab680e106)
+
+
 自由度為n -1 = 25-1 = 24
 
-根據雙尾檢定， $\alpha = 0.05 $,  自由度 = 24，從 t 分布表查Critical Value為 2.064
+根據 $\alpha = 0.05$ 及自由度 = 24，從 t 分布表查Critical Value為 2.064
 
 拒絕域：
 
