--- a/HW1123/12_譚玥湄/CH09.02_Q24.md
+++ b/HW1123/12_譚玥湄/CH09.02_Q24.md
@@ -1,41 +1,45 @@
 CH09.02_Q24 
-O Baby! The weights of 3-month-old baby girls are known to have a mean of 5.86 kilograms.2 Doctors at an inner city pediatric facility suspect that the average weight of 3-month-old baby girls at their facility may be less than 5.86 kilograms. They select a random sample of 40 3-month-old baby girls and find x =5.56 and s=0.70 kilogram.  
+Baby! The weights of 3-month-old baby girls are known to have a mean of 5.86 kilograms.2 Doctors at an inner city pediatric facility suspect that the average weight of 3-month-old baby girls at their facility may be less than 5.86 kilograms. They select a random sample of 40 3-month-old baby girls and find x =5.56 and s=0.70 kilogram.  
 a. Does the data indicate that the average weight of 3-month-old baby girls at their facility is less than 5.86 kilograms? Test using $$\alpha$$ = .05.  
 b. What is the p-value associated with the test in part a? Can you reject $$H_0$$ at the 5% level of significance using the p-value?  
 
 ---
+Step-by-Step Solution
+Part (a): Hypothesis Test
 
-
-
+1.	State the hypotheses:
+o	Null Hypothesis ($$H_0$$): μ=5.86 (The mean weight is 5.86 kg.)
+o	Alternative Hypothesis ($$H_a$$): μ<5.86 (The mean weight is less than 5.86 kg.)
+This is a left-tailed test.
 
 2. Determine the Test Statistic:  
-The formula for the ttt-statistic is: t=s/nxˉ−μ  
+The formula for the ttt-statistic is:
+![image](https://github.com/user-attachments/assets/6a69cd41-da05-4575-a4fc-a2ec7c24adf1)
+ 
 Where:  
-•	xˉ=5.56\bar{x} = 5.56xˉ=5.56 (sample mean)  
+•	$$\overline{x}$$=5.56 (sample mean)  
 •	μ=5.86 (population mean under H0H_0H0)  
-s=0.70 (sample standard deviation)  
+•	s=0.70 (sample standard deviation)  
 •	n=40 (sample size)  
-3. Substitute the Values:
-t=5.56−5.860.70/40=−0.300.1107≈−2.71t = \frac{5.56 - 5.86}{0.70 / \sqrt{40}} = \frac{-0.30}{0.1107} \approx -2.71t=0.70/405.56−5.86=0.1107−0.30≈−2.71
-4. Find the Critical Value:
-With α=0.05\alpha = 0.05α=0.05 and degrees of freedom (df=n−1=39), the critical value for a one-tailed ttt-test can be obtained from a t-distribution table or software. The critical t-value is approximately -1.685.
 
-5. Decision Rule:  
+4. Substitute the Values:
+![image](https://github.com/user-attachments/assets/7e6479af-1fcf-415d-9e6f-4ba4f482545e)
+
+5. Find the Critical Value:
+With α=0.05 and degrees of freedom (df=n−1=39), the critical value for a one-tailed t-test can be obtained from a t-distribution table or software. The critical t-value is approximately -1.685.
+
+6. Decision Rule:  
 •	Reject $$H_0$$ if t≤−1.685.  
 Since t=−2.71 is less than −1.685, we reject $$H_0$$.
-
----
-Part (a):  
-The data indicates that the average weight of 3-month-old baby girls at the facility is significantly less than 5.86 kilograms at the 5% significance level.
 
 ---
 Part (b): Find the p-value
 The p-value corresponds to the area under the ttt-distribution curve to the left of t=−2.71 with df=39.  
 Using statistical software or a ttt-distribution table:  
-•	The p-value for tt=−2.71 with df=39 is approximately 0.005.  
+•	The p-value for tt=−2.71 with df=39 is approximately 0.005. 
+
 Decision Based on the p-value:
-•	If the p-value ≤α\leq \alpha≤α, reject $$H_0$$.
-•	Since p=0.005<0.05, we reject $$H_0$$.
+•	If the p-value ≤α, reject $$H_0$$ , Since p=0.005<0.05, we reject $$H_0$$.
 
 Conclusion for Part (b):
 The p-value confirms that we can reject H0H_0H0 at the 5% significance level. The evidence strongly suggests that the average weight of 3-month-old baby girls at the facility is less than 5.86 kilograms.
