--- a/HW1123/12_譚玥湄/CH09.02_Q25.md
+++ b/HW1123/12_譚玥湄/CH09.02_Q25.md
@@ -11,35 +11,43 @@ We are testing whether the data provide sufficient evidence to refute the manufa
 ________________________________________
 Part (a): State the Null Hypothesis
 The null hypothesis assumes the manufacturer's claim is correct:
-H0:μ=80H_0: \mu = 80H0:μ=80
+H0:μ=80%
+
 ________________________________________
 Part (b): State the Alternative Hypothesis
 The alternative hypothesis reflects the suspicion that the mean potency is not equal to 80%:
-Ha:μ≠80H_a: \mu \neq 80Ha:μ=80
-This is a two-tailed test.
+Ha:μ <> 80%
+
 ________________________________________
 Part (c): Conduct the Statistical Test
-We will use a ttt-test because the population standard deviation is unknown, and the sample size is n=100n = 100n=100, which is sufficiently large.
+We will use a ttt-test because the population standard deviation is unknown, and the sample size is n=100, which is sufficiently large.
 Step 1: Test Statistic Formula
 The test statistic is calculated as:
-t=xˉ−μs/nt = \frac{\bar{x} - \mu}{s / \sqrt{n}}t=s/nxˉ−μ
+![image](https://github.com/user-attachments/assets/a1b0c2d5-636d-4ae0-b1cc-11f6cf9be226)
+
+Step 1: Define test statistic
+The test statistic for a population mean when the population standard deviation is unknown is:
 Where:
-•	xˉ=79.7\bar{x} = 79.7xˉ=79.7 (sample mean),
-•	μ=80\mu = 80μ=80 (population mean under H0H_0H0),
-•	s=0.8s = 0.8s=0.8 (sample standard deviation),
-•	n=100n = 100n=100 (sample size).
+•	$$\bar{x}$$ =79.7% (sample mean),
+•	μ0=80% (hypothesized mean),
+•	s=0.8 (sample standard deviation),
+•	n=100 (sample size).
+
 ________________________________________
 Step 2: Compute the Test Statistic
 Substitute the values into the formula:
-t=79.7−800.8/100=−0.30.08=−3.75t = \frac{79.7 - 80}{0.8 / \sqrt{100}} = \frac{-0.3}{0.08} = -3.75t=0.8/10079.7−80=0.08−0.3=−3.75
+![image](https://github.com/user-attachments/assets/98e6e1bc-a944-4d6a-b0d8-6d16732084b8)
+
 ________________________________________
 Step 3: Determine the Critical Value
-For a two-tailed test at α=0.05\alpha = 0.05α=0.05 and degrees of freedom (df=n−1=99df = n - 1 = 99df=n−1=99), the critical ttt-values can be found using a ttt-distribution table or software:
-t∗=±1.984t^* = \pm 1.984t∗=±1.984
+For a two-tailed test at α=0.05 and degrees of freedom (df=n−1=99), the critical ttt-values can be found using a t-distribution table or software:
+t∗=±1.984
 ________________________________________
-Step 4: Compare Test Statistic and Critical Value
-•	If t≤−1.984t \leq -1.984t≤−1.984 or t≥1.984t \geq 1.984t≥1.984, reject H0H_0H0.
-•	Since t=−3.75<−1.984t = -3.75 < -1.984t=−3.75<−1.984, we reject H0H_0H0.
+Step 4: Compare Test Statistic and Critical Value 
+![Uploading image.png…]()
+
+•	If t≤−1.984, reject $$H_0$$.
+•	Since t=−3.75<−1.984, we reject $$H_0$$.
 ________________________________________
 Conclusion:
 The test statistic falls in the rejection region. Therefore, at the 5% significance level, there is sufficient evidence to refute the manufacturer's claim that the mean potency of the antibiotic is 80%.
