--- a/HW1123/21_徐偉峻/CH09.04_Q01-03.md
+++ b/HW1123/21_徐偉峻/CH09.04_Q01-03.md
@@ -1,5 +1,8 @@
 # CH09.04_Q01-03 #
 
+State the null and alternative hypotheses;
+calculate the appropriate test statistic; provide an $\alpha$ = .05 rejection region;
+and state your conclusions.
 
 
 
