--- a/HW1123/21_徐偉峻/CH09.04_Q01-03.md
+++ b/HW1123/21_徐偉峻/CH09.04_Q01-03.md
@@ -4,7 +4,14 @@ State the null and alternative hypotheses;
 calculate the appropriate test statistic; provide an $\alpha$ = .05 rejection region;
 and state your conclusions.
 
+1. A random sample of n = 1000 from a binomial population contained 279 successes.
+You wish to show that p < .3.
 
+2. A random sample of n = 1400 observations from a binomial population produced x = 529 successes.
+You wish to show that p differs from .4.
+
+3. Seventy-two successes were observed in a random sample of n = 120 observations from a binomial population.
+You wish to show that p > .5.
 
 
 
