--- a/HW1123/21_徐偉峻/CH09.04_Q01-03.md
+++ b/HW1123/21_徐偉峻/CH09.04_Q01-03.md
@@ -4,7 +4,7 @@ State the null and alternative hypotheses; 陳述虛無假設和對立假設
 
 calculate the appropriate test statistic; 計算出適當的檢定統計量
 
-provide an $\alpha$ = .05 rejection region; 提供 $\alpha$ = .05 的拒絕域
+provide an $\alpha$ = .05 rejection region; 提供顯著水準 (significance level) $\alpha$ = .05 的拒絕域
 
 and state your conclusions. 陳述結論
 
