--- a/HW1123/21_徐偉峻/CH09.04_Q01-03.md
+++ b/HW1123/21_徐偉峻/CH09.04_Q01-03.md
@@ -9,7 +9,31 @@ provide an $\alpha$ = .05 rejection region; 顯著水準 (significance level) $\
 and state your conclusions. 陳述結論
 
 1. A random sample of n = 1000 from a binomial population contained 279 successes.
-You wish to show that p < .3.
+You wish to show that p < .3. 隨機樣本二項式分布，樣本大小 n = 1000，樣本中的成功次數為 279 次，希望檢驗比例 p 是否小於 0.3 
+
+$H_0$: P $\ge $ 0.3 
+
+$$H_a$$ : P < 0.3 (左尾檢定) 
+
+已知條件 : n=1000, $$\hat{P} =297/1000 $$=0.297, n*p=300 且 n*(1-p)=700 $$\ge $$ 5，故可採用Z分配進行檢定。  
+
+左尾檢定，故 $$\alpha $$ = 0.05 ，查表得到Z=-1.645 
+
+Z-test :  
+
+Z = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.279 - 0.3}{\sqrt{\frac{0.3 * 0.7}{1000}}} $$ = -1.449 > -1.645 $$。     
+
+因為Z檢定量未落在Rejection Region，故不拒絕 $$H_{0} $$ 。   
+
+
+
+
+
+
+
+
+
+
 
 2. A random sample of n = 1400 observations from a binomial population produced x = 529 successes.
 You wish to show that p differs from .4.
