--- a/HW1123/21_徐偉峻/CH09.04_Q01-03.md
+++ b/HW1123/21_徐偉峻/CH09.04_Q01-03.md
@@ -13,9 +13,9 @@ You wish to show that p < .3. 二項式分布中隨機抽樣且樣本大小為 n
 已知條件 : n=1000, $$\hat{P} =297/1000 $$=0.297, n*p=300 且 n*(1-p)=700 $$\ge $$ 5，故可採用Z分配進行檢定。
 
 a. $H_0 : P = 0.3$ vs $$H_a$$ : P < 0.3 Left-Sided Test(左尾檢定) 
-b. Set $$\alpha $$ = 0.05 ，查表得到Z=-1.645 
+b. Set $\alpha $ = 0.05 ，查表得到Z=-1.645 
 c. The test statstic is 
-$Z_STAT$ = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.279 - 0.3}{\sqrt{\frac{0.3 * 0.7}{1000}}} $$ = -1.449 > -1.645 $$。     
+$Z_STAT$ = $\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $ = $\frac{0.279 - 0.3}{\sqrt{\frac{0.3 * 0.7}{1000}}} $ = -1.449 > -1.645 $。     
 
 因為Z檢定量未落在Rejection Region，故不拒絕 $$H_{0} $$ 。   
 
