--- a/HW1123/21_徐偉峻/CH09.04_Q01-03.md
+++ b/HW1123/21_徐偉峻/CH09.04_Q01-03.md
@@ -16,7 +16,7 @@ a. $H_0 : P = 0.3$ vs $$H_a$$ : P < 0.3 Left-Sided Test(左尾檢定)
 
 b. Set $\alpha $ = 0.05 ，查表得到Z=-1.645 
 
-c. The test statstic is $Z_STAT$ = $\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $ = $\frac{0.279 - 0.3}{\sqrt{\frac{0.3 * 0.7}{1000}}} $ = -1.449 > -1.645     
+c. The test statstic is $Z_{STAT}$ = $\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $ = $\frac{0.279 - 0.3}{\sqrt{\frac{0.3 * 0.7}{1000}}} $ = -1.449 > -1.645     
 
 因為Z檢定量未落在Rejection Region，故不拒絕 $$H_{0} $$ 。   
 
