--- a/HW1123/21_徐偉峻/CH09.04_Q01-03.md
+++ b/HW1123/21_徐偉峻/CH09.04_Q01-03.md
@@ -9,8 +9,11 @@ provide an $\alpha$ = .05 rejection region; 顯著水準 (significance level) $\
 and state your conclusions. 陳述結論
 
 1. A random sample of n = 1000 from a binomial population contained 279 successes.
-You wish to show that p < .3. 二項式分布中隨機抽樣且樣本大小為 n = 1000，樣本中的成功次數為 279 次，希望檢驗比例 p 是否小於 0.3 
-已知條件 : n=1000, $$\hat{P} =297/1000 $$=0.297, n*p=300 且 n*(1-p)=700 $$\ge $$ 5，故可採用Z分配進行檢定。
+You wish to show that p < .3.
+
+二項式分布中隨機抽樣且樣本大小為 n = 1000，樣本中的成功次數為 279 次，希望檢驗比例 p 是否小於 0.3
+
+$$\hat{P} =297/1000 $$=0.297
 
 a. $H_0 : P = 0.3$ vs $$H_a$$ : P < 0.3 Left-Sided Test(左尾檢定) 
 
@@ -19,15 +22,6 @@ b. Set $\alpha $ = 0.05  Z = -1.645 (查表得知)
 c. The test statstic is $Z_{STAT}$ = $\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $ = $\frac{0.279 - 0.3}{\sqrt{\frac{0.3 * 0.7}{1000}}} $ = -1.449     
 
 因為Z的統計檢定量未落在Rejection Region，所以不拒絕 $H_{0} $ 。   
-
-
-
-
-
-
-
-
-
 
 
 2. A random sample of n = 1400 observations from a binomial population produced x = 529 successes.
@@ -39,14 +33,4 @@ You wish to show that p > .5.
 
 
 
-
-A random sample of size n from a binomail population to test
-
-$H_0: p = p_0$ versus
-
-$H_a: one of three alternatives$
-
-Test statsitics: z = $\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}}$
-
-with rejection regions and/or p-values based on the standard normal z distribution
 
