--- a/HW1123/21_徐偉峻/CH09.04_Q01-03.md
+++ b/HW1123/21_徐偉峻/CH09.04_Q01-03.md
@@ -13,7 +13,7 @@ You wish to show that p < .3.
 
 二項式分布中隨機抽樣且樣本大小為 n = 1000，樣本中的成功次數為 279 次，希望檢驗比例 p 是否小於 0.3
 
-$\hat{P} = 297/1000 $ = 0.297
+$\hat{p} = \frac{297}{1000} $ = 0.297
 
 a. $H_0 : P = 0.3$ vs $$H_a$$ : P < 0.3 Left-Sided Test(左尾檢定) 
 
