--- a/HW1123/21_徐偉峻/CH09.04_Q01-03.md
+++ b/HW1123/21_徐偉峻/CH09.04_Q01-03.md
@@ -15,7 +15,7 @@ You wish to show that p < .3.
 
 $\hat{p} = \frac{297}{1000} = 0.297$
 
-a. $H_0 : P = 0.3$ vs $$H_a$$ : P < 0.3 Left-Sided Test(左尾檢定) 
+a. $H_0 : p = 0.3$ vs $$H_a$$ : p < 0.3 Left-Sided Test(左尾檢定) 
 
 b. Set $\alpha $ = 0.05  Z = -1.645 (查表得知) 
 
