--- a/HW1123/21_徐偉峻/CH09.04_Q01-03.md
+++ b/HW1123/21_徐偉峻/CH09.04_Q01-03.md
@@ -21,7 +21,7 @@ b. Set $\alpha $ = 0.05  Z = -1.645 (查表得知)
 
 c. The test statstic is $Z_{\text{STAT}} = \frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} = \frac{0.279 - 0.3}{\sqrt{\frac{0.3 \cdot 0.7}{1000}}} = -1.449$     
 
-因為Z的統計檢定量未落在Rejection Region，所以不拒絕 $H_{0}$   
+因為Z的統計檢定量未落在Rejection Region，所以不拒絕虛無假設 $H_{0}$，無直接證據證明 p < .3 。   
 
 
 2. A random sample of n = 1400 observations from a binomial population produced x = 529 successes.
