--- a/HW1123/21_徐偉峻/CH09.04_Q01-03.md
+++ b/HW1123/21_徐偉峻/CH09.04_Q01-03.md
@@ -27,6 +27,31 @@ c. The test statstic is $Z_{\text{STAT}} = \frac{\hat{p} - p_0}{\sqrt{\frac{p_0 
 2. A random sample of n = 1400 observations from a binomial population produced x = 529 successes.
 You wish to show that p differs from .4.
 
+二項式分布中隨機抽樣且樣本大小為 n = 1400，樣本中的成功次數為 529 次，檢驗比例 p 不等於 0.4
+
+$\hat{p} = \frac{529}{1400} = 0.3779$
+
+a. $H_0 : p = 0.4$ vs $H_a$ : p $\ne $ 0.4 Two-Sided Test(雙尾檢定)
+
+b. $\frac{\alpha}{2} $ = 0.025 > Z = 1.96 (查表得知) 
+
+c. The test statstic is $Z_{\text{STAT}} = \frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} = \frac{0.3779 - 0.4}{\sqrt{\frac{0.4 \cdot 0.6}{1400}}} = 1.688$ 
+
+因為Z的統計檢定量未落在Rejection Region，所以不拒絕虛無假設 $H_{0}$，無直接證據證明 p $\ne $ 0.4 。  
+
+
+
+
+Z-test :  
+
+|Z| = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.3779 - 0.4}{\sqrt{\frac{0.4 * 0.6}{1400}}} $$ = 1.688 < 1.96 $$。     
+
+因為Z檢定量未落在Rejection Region，故不拒絕 $$H_{0} $$ 。 
+
+
+
+
+
 3. Seventy-two successes were observed in a random sample of n = 120 observations from a binomial population.
 You wish to show that p > .5.
 
