--- a/HW1123/21_徐偉峻/CH09.04_Q01-03.md
+++ b/HW1123/21_徐偉峻/CH09.04_Q01-03.md
@@ -66,18 +66,8 @@ b. Set $\alpha $ = 0.05  Z = 1.645 (查表得知)
 
 c. The test statstic is $Z_{\text{STAT}} = \frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} = \frac{0.6 - 0.5}{\sqrt{\frac{0.5 \cdot 0.5}{120}}} = -1.449$     
 
-因為Z的統計檢定量未落在Rejection Region，所以不拒絕虛無假設 $H_{0}$，無直接證據證明 p < .3 。 
+因為Z的統計檢定量未落在Rejection Region，所以不拒絕虛無假設 $H_{0}$，無直接證據證明 p > .5 。 
 
-
-
-
-右尾檢定，故 $$\alpha $$ = 0.05 ，查表得到Z=1.645  
- 
-Z-test :   
- 
-Z = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.6 - 0.5}{\sqrt{\frac{0.5 * 0.5}{1000}}} $$ = 2.1909 > 1.645 $$。   
- 
-因為Z檢定量落入Rejection Region，故拒絕 $$H_{0} $$ 。   
 
 
 
