--- a/HW1123/21_徐偉峻/CH09.04_Q01-03.md
+++ b/HW1123/21_徐偉峻/CH09.04_Q01-03.md
@@ -17,7 +17,7 @@ $\hat{p} = \frac{297}{1000} = 0.297$
 
 a. $H_0 : p = 0.3$ vs $$H_a$$ : p < 0.3 Left-Sided Test(左尾檢定) 
 
-b. $\alpha$ = 0.05, Z = -1.645 (查表得知) 
+b. $\alpha$ = 0.05, Z = -1.645 (查表得知), RR = {Z < -1.645}
 
 c. The test statstic is $Z_{\text{STAT}} = \frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} = \frac{0.279 - 0.3}{\sqrt{\frac{0.3 \cdot 0.7}{1000}}} = -1.449$     
 
