--- a/HW1123/21_徐偉峻/CH09.04_Q01-03.md
+++ b/HW1123/21_徐偉峻/CH09.04_Q01-03.md
@@ -53,7 +53,7 @@ b. Set $\alpha $ = 0.05  Z = 1.645 (查表得知)
 
 c. The test statstic is $Z_{\text{STAT}} = \frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} = \frac{0.6 - 0.5}{\sqrt{\frac{0.5 \cdot 0.5}{120}}} = 2.191$     
 
-因為Z的統計檢定量未落在Rejection Region，所以不拒絕虛無假設 $H_{0}$，無直接證據證明 p > .5 。 
+因為Z的統計檢定量未落在Rejection Region，所以拒絕虛無假設 $H_{0}$，有直接證據證明 p > .5 。 
 
 
 
