--- a/HW1123/21_徐偉峻/CH09.04_Q01-03.md
+++ b/HW1123/21_徐偉峻/CH09.04_Q01-03.md
@@ -9,7 +9,8 @@ provide an $\alpha$ = .05 rejection region; 顯著水準 (significance level) $\
 
 and state your conclusions. 陳述結論
 
-# 1. A random sample of n = 1000 from a binomial population contained 279 successes. You wish to show that p < .3. #
+1. A random sample of n = 1000 from a binomial population contained 279 successes.
+You wish to show that p < .3.
 
 二項式分布中隨機抽樣且樣本大小為 n = 1000，樣本中的成功次數為 279 次，檢驗比例 p 是否小於 0.3
 
